Change the way upcoming fixed-date tasks are calculated